--- a/Simple Sidebar Design/index.html
+++ b/Simple Sidebar Design/index.html
@@ -1,28 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Simple Sidebar Design</title>
-    <link rel="stylesheet" href="style.css">
-    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css" integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A==" crossorigin="anonymous" referrerpolicy="no-referrer" />
-</head>
-<body>
-    <div class="sidebar-container">
-        <div id="header-sidebar">
-            <p><i>My App</i></p>
-        </div>
-        <div id="sidebar-menus">
-            <ul>
-                <li><a href="#"><i class="fa-solid fa-gauge"></i>Dashboard</a></li>
-                <li><a href="#"><i class="fa-solid fa-list-check"></i>Projects</a></li>
-                <li><a href="#"><i class="fa-solid fa-check"></i>Notifications</a></li>
-                <li><a href="#"><i class="fa-solid fa-chart-simple"></i>Analytics</a></li>
-                <li><a href="#"><i class="fa-solid fa-heart"></i>Likes</a></li>
-                <li><a href="#"><i class="fa-solid fa-wallet"></i>Wallets</a></li>
-                <li><a href="#"><i class="fa-solid fa-message"></i>Messages</a></li>
-            </ul>
-        </div>
+    <link rel="stylesheet" href="style.css" />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.5.2/css/all.min.css"
+      integrity="sha512-SnH5WK+bZxgPHs44uWIX+LLJAJ9/2PkPKZ5QiAj6Ta86w+fsb2TkcmfRyVX3pBnMFcV7oQPJkl9QevSCWr3W6A=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.6.0/css/all.min.css"
+      integrity="sha512-Kc323vGBEqzTmouAECnVceyQqyqdsSiqLQISBL29aUW4U/M7pSPA/gEUZQqv1cwx4OnYxTxve5UMg5GT6L4JJg=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <script
+      src="https://code.jquery.com/jquery-3.7.1.min.js"
+      integrity="sha256-/JqT3SQfawRcv/BIHPThkBvs0OEvtFFmqPF/lYI/Cxo="
+      crossorigin="anonymous"
+    ></script>
+  </head>
+  <body>
+    <i class="fa-solid fa-bars fa-2x"></i>
+    <div class="sidebar-container" style="display: none">
+      <div id="header-sidebar">
+        <p><i>My App</i></p>
+        <button class="close-sb">X</button>
+      </div>
+      <div id="sidebar-menus">
+        <ul>
+          <li>
+            <a href="#"><i class="fa-solid fa-gauge"></i>Dashboard</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-list-check"></i>Projects</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-check"></i>Notifications</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-chart-simple"></i>Analytics</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-heart"></i>Likes</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-wallet"></i>Wallets</a>
+          </li>
+          <li>
+            <a href="#"><i class="fa-solid fa-message"></i>Messages</a>
+          </li>
+        </ul>
+      </div>
     </div>
-</body>
+    <script src="responsive.js"></script>
+  </body>
 </html>
